--- a/penner/templates/penner/detail.html
+++ b/penner/templates/penner/detail.html
@@ -14,6 +14,7 @@
    <li>Notes: {{object.notes }}</li>
 
 </ul>
+<h2><a href='{% url "penner:create" %}'>Add Another Expense</a></h2>
 
 
 {% endblock content %}
