--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -11,7 +11,7 @@
 <div style="margin-top:30px;">
     <form action = '.' method="POST">
         {% csrf_token %}
-        {{ form|crispy }}
+       {% crispy form %}
         <button style='margin-top:10px;' type='submit' >Add Expense</button>
     </form>
 </div>
