--- a/penner/templates/penner/base.html
+++ b/penner/templates/penner/base.html
@@ -3,7 +3,10 @@
 <html>
 <head>
   <title>{% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="{% static "css/sytle.css" %}" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
   <div id="content">
