--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -8,7 +8,9 @@
 
 <p>{{ message }} </p>
 {% endif %}
-<div style="margin-top:30px;">
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Penner Expense Tracking</h5>
     <form action = '.' method="POST">
         <div class="mb-3">
         {% csrf_token %}
@@ -16,6 +18,7 @@
         <button type="submit" class="btn btn-primary">Add Expense</button>
         </div>
     </form>
+    </div>
 </div>
 
 {% endblock content %}
