--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -16,7 +16,7 @@
         <div class="mb-3 ml-3">
         {% csrf_token %}
         {% crispy form %}
-        <button type="submit" class="btn btn-primary">Add Expense</button>
+        <button type="submit" class="btn btn-primary mt-3">Add Expense</button>
         </div>
     </form>
     </div>
