--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -21,5 +21,16 @@
     </form>
     </div>
 </div>
+<script>
+    $(function() {
+      $( ".datepicker" ).datepicker({
+        changeMonth: true,
+        changeYear: true,
+        yearRange: "1900:2023",
+        // You can put more options here.
+  
+      });
+    });
+    </script>
 
 {% endblock content %}
