--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -9,7 +9,7 @@
 
 <p>{{ message }} </p>
 {% endif %}
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem; ml-6">
     <div class="card-body">
       <h5 class="card-title">Penner Expense Tracking</h5>
     <form action = '.' method="POST">
