--- a/penner/templates/penner/create-update.html
+++ b/penner/templates/penner/create-update.html
@@ -19,6 +19,7 @@
         <button type="submit" class="btn btn-primary mt-3">Add Expense</button>
         </div>
     </form>
+    <p>The total so far is: {{ sum }}</p>
     </div>
 </div>
 
