--- a/penner/templates/penner/list.html
+++ b/penner/templates/penner/list.html
@@ -14,6 +14,8 @@
         {% endif %}
     {% endfor %}
 </ul>
+{% for sum in object_list %}
 
-
+<p>The total so far is: {{ sum.amount }}</p>
+{% endfor %}
 {% endblock content %}
