--- a/penner/templates/penner/list.html
+++ b/penner/templates/penner/list.html
@@ -14,8 +14,8 @@
         {% endif %}
     {% endfor %}
 </ul>
-{% for sum in object_list %}
 
-<p>The total so far is: {{ sum.amount }}</p>
-{% endfor %}
+
+<p>The total so far is: {{ sum }}</p>
+
 {% endblock content %}
